--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,6 +7,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -16,11 +17,12 @@
         android:layout_gravity="center"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="@color/material_dynamic_secondary30"
+        app:cardBackgroundColor="@color/design_default_color_primary"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">
 
         <LinearLayout
+            android:id="@+id/list_item_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -31,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textColor="@color/white"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 tools:text="Name" />
 
@@ -41,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textColor="@color/white"
-                android:textSize="30sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 tools:text="Email" />
         </LinearLayout>
